wp-content/themes/pacific-beach-mobile/css/style.css
/* ... */
@-webkit-keyframes fadeInRight {0%{opacity:0;-webkit-transform:translateX(20px)} 100%{opacity:1;-webkit-transform:translateX(0)}}@-moz-keyframes fadeInRight{0%{opacity:0;-moz-transform:translateX(20px)} 100%{opacity:1;-moz-transform:translateX(0)}}@-o-keyframes fadeInRight{0%{opacity:0;-o-transform:translateX(20px)} 100%{opacity:1;-o-transform:translateX(0)}}@keyframes fadeInRight{0%{opacity:0;transform:translateX(20px)} 100%{opacity:1;transform:translateX(0)}}.fadeInRight{-webkit-animation-name:fadeInRight;-moz-animation-name:fadeInRight;-o-animation-name:fadeInRight;animation-name:fadeInRight}


@-webkit-keyframes fadeInUp{0%{opacity:0;-webkit-transform:translateY(20px)} 100%{opacity:1;-webkit-transform:translateY(0)}}@-moz-keyframes fadeInUp{0%{opacity:0;-moz-transform:translateY(20px)} 100%{opacity:1;-moz-transform:translateY(0)}}@-o-keyframes fadeInUp{0%{opacity:0;-o-transform:translateY(20px)} 100%{opacity:1;-o-transform:translateY(0)}}@keyframes fadeInUp{0%{opacity:0;transform:translateY(20px)} 100%{opacity:1;transform:translateY(0)}}.fadeInUp{-webkit-animation-name:fadeInUp;-moz-animation-name:fadeInUp;-o-animation-name:fadeInUp;animation-name:fadeInUp}



@-webkit-keyframes DropDown{0%{-webkit-transform:translateY(-20px)} 100%{-webkit-transform:translateY(0)}}@-moz-keyframes DropDown{0%{-moz-transform:translateY(-20px)} 100%{-moz-transform:translateY(0)}}@-o-keyframes DropDown{0%{-o-transform:translateY(-20px)} 100%{-o-transform:translateY(0)}}@keyframes DropDown{0%{transform:translateY(-20px)} 100%{transform:translateY(0)}}.DropDown{-webkit-animation-name:DropDown;-moz-animation-name:DropDown;-o-animation-name:fadeInDown;animation-name:DropDown}



@-webkit-keyframes justUp{0%{ bottom: -30px; } 100%{ bottom: 0 }}@-moz-keyframes justUp{0%{ bottom: -30px; } 100%{ bottom: 0px;}}@-o-keyframes justUp{0%{ bottom: -30px; } 100%{ bottom: 0px;}}@keyframes justUp{0%{ bottom: -30px; } 100%{ bottom: 0px; }}.justUp{-webkit-animation-name:justUp;-moz-animation-name:justUp;-o-animation-name:justUp;animation-name:justUp}


@-webkit-keyframes DropDown{0%{-webkit-transform:translateY(-20px)} 100%{-webkit-transform:translateY(0)}}@-moz-keyframes DropDown{0%{-moz-transform:translateY(-20px)} 100%{-moz-transform:translateY(0)}}@-o-keyframes DropDown{0%{-o-transform:translateY(-20px)} 100%{-o-transform:translateY(0)}}@keyframes DropDown{0%{transform:translateY(-20px)} 100%{transform:translateY(0)}}.DropDown{-webkit-animation-name:DropDown;-moz-animation-name:DropDown;-o-animation-name:fadeInDown;animation-name:DropDown}





.welcomelogo {
	min-height: 150px;
	padding-top: 130px;
	text-align: center;
	-webkit-animation-fill-mode: both;
	-moz-animation-fill-mode:both;
	-ms-animation-fill-mode:both;
	-o-animation-fill-mode:both;
	animation-fill-mode:both;
	-webkit-animation-duration:2s;
	-moz-animation-duration:2s;
	-ms-animation-duration:2s;
	-o-animation-duration:2s;
	animation-duration:2s;
	-webkit-animation-name:fadeInDown;
	-moz-animation-name:fadeInDown;
	-o-animation-name:fadeInDown;
	animation-name:fadeInDown;
	-webkit-animation-delay: .5s;
	-moz-animation-delay: .5s;
	-ms-animation-delay: .5s;
	-o-animation-delay: .5s;
	-webkit-font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
} 

.welcomelogo img {
	width: 80%;
	margin: auto;
	text-align: center;	
}

.tripadvisor-logo {
	height: 39px;
	position: absolute;
	right: 20px;
	top: 60px;
	width: 45px;
	z-index: 999;
}

#sitewrap {
	background-size: cover;
	position: relative;
	padding: 0px;
	/*height: 100%;*/
}

#sitewrap:before {
	background: #eff6fd;
	position: absolute;
	height: 100%;
	width: 100%;
	content: '';
	top: 0;
	left: 0;
	z-index: 1;	
}

#sitewrap:after {
	position: absolute;
	height: 100%;
	width: 100%;
	content: '';
	top: 0;
	/*background-image: url(../images/index2.jpg);*/
	left: 0;
	z-index: 0;	
	 -webkit-filter: blur(3px);
  	-moz-filter: blur(3px);
  	-o-filter: blur(3px);
  	-ms-filter: blur(3px);
  	filter: blur(3px);
}


.menu-wrapper {
	width: 100%;
	background: none no-repeat scroll 0 0 #eff6fd;
	width: 100%;
	background-size: 27%;
	height: 80px;
	z-index: 99999999999;
	position: relative;
	/* position: fixed;
	z-index: 9999 */
}

.home .menu-wrapper, .menu-wrapper {
	background: none no-repeat scroll 0 0 #fff;
}

.menu-wrapper:before {
	background: #fff;
	position: absolute;
	bottom: 0;
	width: 100%;
	left: 0;
	height: 1px;
	background: rgba(255,255,255,0.2);
	content: '';
	display: none;
}


#header-bar {
	width: 100%;
	position: absolute;
	background: #fff;
}

.content-wrapper {
	max-width: 1000px;
	padding: 0;
	background-color: transparent;
}




.copybody {
	padding-top: 0px;
	background-size: cover;
	background-position: center center;
	position: relative;
}

.copybody:before {
	background: rgba(0,0,0,0.6);
	position: absolute;
	height: 100%;
	width: 100%;
	content: '';
	top: 0;
	left: 0;
	z-index: 1;	
}

.copybody:after {
	background: url(../images/noise.png);
	position: absolute;
	height: 100%;
	width: 100%;
	content: '';
	top: 0;
	left: 0;
	z-index: 0;	
}



.stage {
	position: relative;
	z-index: 2;
	padding: 10px;
}












.reservationform {
	width: 98%;
	overflow: hidden;
	margin: auto;
	position: relative;
	z-index: 3;
	
}


.calsec {
	display: block;
}

.reservationform .button {
	display: block;
}	
input#arrival_date.calendarsection {
	width: 10%;
}




.ad-drop {
	width: calc(50% - 8px);
	float: left;
	position: relative;
	padding: 8px 0;
	overflow: hidden;
}

.reservationform select.lefter {
	width: calc(50% - 8px);
	float: left;
	position: relative;
	padding: 8px 5px;
	overflow: hidden;
	border: 4px solid #fff;
}
.reservationform select.righter {
	width: calc(50% - 8px);
	float: right;
	position: relative;
	padding: 8px 5px;
	overflow: hidden;
	border: 4px solid #fff;
}
/* ... */

